2009-01-20  Ingo Renner  <ingo@typo3.org>

	* Added missing license statement for using the "Silk" icon set of Mark James according to Creative Commons Attribution 2.5

2009-01-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9935: htmlArea RTE: enableWordClean on paste does not work when hidden button is not in toolbar

2009-01-19  Steffen Kamper  <info@sk-typo3.de>

	*  Fixed bug #10183: [felogin] redirect doesn't work with return_url

2009-01-18  Francois Suter  <francois@typo3.org>

	* Cleanup #10125: Replace deprecated function calls in sysext indexed_search (thanks to Markus Krause)

2009-01-17  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #7677: Constants are not correctly substituted on some PHP5 distributions

2009-01-16  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9307: Remove an obsolete check for disable_exec_function in filelist
	* Fixed bug #10157: t3lib/config_default.php textfile_ext should be updated to include xml and other text types

2009-01-15  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10057: hide/unhide page causes error when done via the context menu
	* Fixed bug #10158: change of url only (com => org)
	* Fixed bug #8787: titles length in list module (thanks to Stefano Cecere)

2009-01-14  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #10140: htmlArea RTE: Alignment of td's and th's in out-of-the-box installation

2009-01-14  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10143 spamProtectEmailAddresses_atSubst does not work correctly if linktext contains email address with uppercase charachters (thanks to Helmut Hummel)

2009-01-14  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #10116: Remove/protect adodb testfiles (thanks to Marcus Krause)

2009-01-13  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #10109: Google reports duplicate title tag
	* Fixed bug #10120: Add .buildpath to svn:ignore

2009-01-12  Oliver Hader  <oliver@typo3.org>
