@@ -1,6 +1,7 @@
 2009-01-20  Ingo Renner  <ingo@typo3.org>
 
 	* Added missing license statement for using the "Silk" icon set of Mark James according to Creative Commons Attribution 2.5
+	* Fixed bug #10134: XSS vulnerability in sysext indexed_search (thanks to the TYPO3 Security Team and especially Marcus Krause)
 
 2009-01-19  Stanislas Rolland  <typo3@sjbr.ca>
 
